<resources>
    <string name="app_name">PreScoop</string>
    <string name="string_range_main">Range</string>
    <string name="string_rating_main">Rating</string>
    <string name="budget_string">Monthly Budget</string>
    <string name="preshool_search">Search for PreSchools</string>]
    <string name="little_urbanites">Little Urbanites was founded on the idea that every city kid deserves an oasis of childhood delight and within our doors that is exactly what they’ll find.</string>
    <string name="sunset_co_op_description">Sunset Cooperative Nursery School is a parent-participation school for 2- to 6-year-old children. Sunset Co-op provides a trusting and caring environment for our children to live, learn and play. Parent participation is the backbone to the co&#8211;op preschool\'s philosophy and strength. Sunset Co-op\'s community consists of 50 to 60 families, and each family commits to a half-day of work per week. The school has a professional education director and at least two other preschool teachers. There are separate morning and afternoon sessions, with typically 9 adults per session to assist classes of up to 30 kids. </string>
    <string name="sf_montesorri_description">At SFMA our mission is to help parents build a strong foundation for their child\'s lifelong excellence. Because we are the driving force behind your child\'s most formative years, we understand the importance of our role and take it very seriously. We pride ourselves in the success of every student and welcome you to visit our school to see what makes us different.</string>
    <string name="quarry_description">The Quarry Lane School, a private, secular day school, provides an academically rigorous and supportive educational environment for students entering preschool through high school.  Our ethnically diverse student body consists of 900 students at our three campuses.  Students are guided by a highly qualified, professional and experienced staff of over 135 teachers.  The Quarry Lane School is accredited by WASC, NCPSA and NIPSA.</string>
    <string name="acorn_description">Offers interactive curriculum to fully engage and challenge children with programs for ages 2&#8211;3, 4/pre-k, accelerated pre&#8211;k, junior&#8211;k/kindergarten and after&#8211;school care. Multiple locations in Danville and San Ramon. 925&#8211;837&#8211;1145.</string>
    <string name="address_label_detail">Address</string>
    <string name="rating_label_detail">Rating</string>
    <string name="description_label_detail">Description</string>
    <string name="search_hint">Filter list by....</string>
    <string name="school_name_text">School Name</string>
    <string name="find_favs">Find Favs</string>
    <string name="filter_search">Filter List</string>
    <string name="acorn_primary_photo">Acorn School Primary Photo</string>
    <string name="fav_school">Favorite This School</string>
    <string name="school_type">Type</string>
    <string name="school_rating">School Rating</string>
    <string name="school_region">Region</string>
    <string name="school_age_group">Age Group</string>
    <string name="school_additional_photo">schools additional photo 2</string>
    <string name="acorn_name">Acorn Learning Center</string>
    <string name="montessori_name">San Francisco Montessori Academy</string>
    <string name="acorn_image1_description">acorn Image Desc. 1</string>
    <string name="defualt_image_description">This Photo Should Have A Description</string>
    <string name="urbanites_description">We offer a full day program for children ages 2.5&#8211;5yrs. We’re open daily 8:30&#8211;5:30. Tuition includes nutritious daily snacks and lunch made with wholesome organic ingredients whenever possible. We offer a staff to student ratio of 1:5.</string>
    <string name="no_favorites">No Favorites To View, Add One From The Details Page</string>
    <string name="imagine_name">Stretch The Imagination</string>
    <string name="imagine_description">At Stretch the Imagination we feel a deep responsibility to honoring and protecting this magical time in a child\’s life. We take great pride in creating a safe, nurturing and creative environment where young children are viewed as competent and capable learners. Our school is a place of research, collaboration, and play where children and teachers learn together through project work and creative discovery.  We see it as our responsibility to meet each child where they are as individuals, cultivating a love of learning and a confidence in themselves.</string>
    <string name="acorn_street_address">816 Diablo Rd</string>
    <string name="acorn_city">Danville</string>
    <string name="school_state">CA</string>
    <string name="acorn_zipcode">94526</string>
    <string name="public_type">public</string>
    <string name="acorn_region">East Bay</string>
    <string name="acorn_phoneNum">925.837.1145</string>
    <string name="acorn_ageGroup">2-5 Years</string>
    <string name="quarry_name">The Quarry Lane School</string>
    <string name="quarry_street_address">3750 Boulder St.</string>
    <string name="quarry_city">Pleasanton</string>
    <string name="quarry_zipcode">94568</string>
    <string name="quarry_region">East Bay</string>
    <string name="quarry_phoneNum">(925) 462-6300</string>
    <string name="quarry_ageGroup">1-5 years</string>
    <string name="montessori_street_address">1566 32nd Ave.</string>
    <string name="montessori_city">San Francisco</string>
    <string name="montessori_zipcode">94122</string>
    <string name="private_type">private</string>
    <string name="montessori_region">San Francisco</string>
    <string name="montessori_phone">(415) 504-6467</string>
    <string name="montessori_ageGroup">3-5 years</string>
    <string name="sunset_name">Sunset Co-op Nursery School</string>
    <string name="sunset_street_address">4245 Lawton St.</string>
    <string name="sunset_city">San Francisco</string>
    <string name="sunset_zipcode">94122</string>
    <string name="co_op_type">co-op</string>
    <string name="sunset_region">San Francisco</string>
    <string name="sunset_phoneNum">415.759.5710</string>
    <string name="sunset_ageGroup">2-5</string>
    <string name="urbanites_name">Little Urbanites Preschool</string>
    <string name="urbanites_street_address">1258 20th Avenue</string>
    <string name="urbanites_city">San Francisco</string>
    <string name="urbanites_state">CA</string>
    <string name="urbanites_zipcode">94122</string>
    <string name="urbanites_region">East Bay</string>
    <string name="urbanites_phoneNum">925.837.1145</string>
    <string name="urbanites_ageGroup">2-5 Years</string>
    <string name="imagine_street_address">2509 Bush St</string>
    <string name="imagine_city">San Francisco</string>
    <string name="imagine_state">CA</string>
    <string name="imagine_zipcode">94115</string>
    <string name="imagine_region">San Francisco</string>
    <string name="imagine_phoneNum">(415) 922-0104</string>
    <string name="imagine_ageGroup">2 - 5 years</string>
    <string name="no_results">No Results Found, Please Try Again</string>


    <!-- this is the data for the range drop down in MainActivity -->
    <string-array name="range_array">
        <item>Select A Range</item>
        <item>1 Mile</item>
        <item>5 Miles</item>
        <item>10 Miles</item>
        <item>15 Miles</item>
        <item>20 Miles</item>
    </string-array>

</resources>
