<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.anthony.prescoop.activity.DetailActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:background="@color/colorTransparent"/>

    </FrameLayout>


    <RelativeLayout
        android:id="@+id/header_image_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/toolbar_details">

        <ImageView
            android:id="@+id/default_school_image_detail"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="center"
            android:src="@drawable/urbanites2"
            android:contentDescription="@string/acorn_primary_photo"/>

        <TextView
            android:id="@+id/price_info_detail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="25sp"
            android:background="#80000000"
            android:paddingTop="5dp"
            android:layout_alignBottom="@+id/default_school_image_detail"/>


    </RelativeLayout>

    <ScrollView
        android:id="@+id/content_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header_image_details">
        <LinearLayout
            android:id="@+id/content_scroll_parent_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/content_row_1_relative"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/address_text_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address_label_detail"
                    android:textStyle="bold"
                    android:layout_marginTop="0dp"
                    android:layout_marginStart="10dp"/>

                <ImageButton
                    android:id="@+id/favorite_school_image_detail"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_favorite_border_black_24dp"
                    android:background="@android:color/transparent"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="50dp"
                    android:contentDescription="@string/fav_school"/>


                <TextView
                    android:id="@+id/address_info_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/address_text_detail"
                    android:layout_alignStart="@+id/address_text_detail" />

            </RelativeLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray"/>

            <RelativeLayout
                android:id="@+id/content_row_2_relative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/rating_text_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rating_label_detail"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"/>

                <ImageView
                    android:id="@+id/rating_image_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/one_star"
                    android:layout_marginTop="5dp"
                    android:layout_below="@+id/rating_text_detail"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/school_rating"/>

                <TextView
                    android:id="@+id/type_text_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/school_type"
                    android:textStyle="bold"
                    android:layout_alignTop="@+id/rating_text_detail"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="50dp"/>

                <TextView
                    android:id="@+id/type_info_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/type_text_detail"
                    android:layout_below="@+id/type_text_detail"
                    android:layout_marginTop="5dp"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray"/>

            <RelativeLayout
                android:id="@+id/content_row_3_relative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/region_text_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/school_region"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"/>

                <TextView
                    android:id="@+id/region_info_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_below="@+id/region_text_detail"
                    android:layout_marginStart="10dp"/>

                <TextView
                    android:id="@+id/age_group_text_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/school_age_group"
                    android:textStyle="bold"
                    android:layout_alignTop="@+id/region_text_detail"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="25dp"/>

                <TextView
                    android:id="@+id/age_group_info_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignStart="@+id/age_group_text_detail" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/content_row_4_relative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/darker_gray"/>

                <TextView
                    android:id="@+id/description_text_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description_label_detail"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="10dp"/>

                <TextView
                    android:id="@+id/description_info_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_below="@+id/description_text_detail"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/content_row_images"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/school_photo2_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/school_additional_photo"/>
                <TextView
                    android:id="@+id/school_photo2_description_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/school_photo2_detail"/>
                <ImageView
                    android:id="@+id/school_photo3_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/school_additional_photo"
                    android:layout_below="@+id/school_photo2_description_detail"
                    android:src="@drawable/urbanites2"/>

                <TextView
                    android:id="@+id/school_photo3_description_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/urbanites2"
                    android:layout_below="@+id/school_photo3_detail"/>

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
